cabal-version:      2.4
name:               org-links
version:            0.1.0.0
author:             Franco Cortesi
maintainer:         cortesifranco3@gmail.com
extra-source-files: CHANGELOG.md

executable org-links
    main-is:          Main.hs
    build-depends:    base
                    , network-uri 
                    , utf8-string
                    , split
                    , process

    hs-source-dirs:   app
    default-language: Haskell2010
